# googletest-cmake-example

./: CMakeLists.txt  LICENSE  README.md
include/: Addition.h
src/: Addition.cpp  CMakeLists.txt  main.cpp
test/: AdditionTest.cpp  CMakeLists.txt  main.cpp  sampleTest.cpp
